[project]
name = "czc-diffusing"
version = "0.0.1"
authors = [
  { name="Christopher Collier", email="czcollier@gmail.com" },
]
description = "A small set of diffusion model utilities"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/czcollier/diffusing"

[build-system]
requires = [
  "diffusers @ git+https://github.com/huggingface/diffusers",
  "sd_embed @ git+https://github.com/xhinker/sd_embed.git@main",
  "imagehash",
  "piexif",
  "huggingface_hub[cli]",
  "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"
